# sam_subsample

./: Cargo.toml  README.md
src/: main.rs
test/: input.bam  output.bam
