[package]
name = "sam_subsample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "*", default-features = false }
rand = "0.8"
rand_pcg = "0.3"
getopts = "0.2"
regex = "1.3"
log = { version = "0.4" }
env_logger = "0.7"
chrono = "0.4"